--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<title>jokerwango.github.io</title>
 </head>
-<body>
+<body style="background:url(1.jpg) center top no-reapt;">
 	I'm Wang QingZhi
 <img src="http://b364.photo.store.qq.com/psb?/V13CvoRz4f0cJw/pvyDUg6.*P4EZzA5pmHSGUd80HQMS1L852monT04wPU!/b/dGwBAAAAAAAA&bo=gAc4BAAAAAARB4s!&rf=viewer_4" width="500" height="300">	
+
 </body>
 </html>
