--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<title>jokerwango.github.io</title>
 </head>
-<body style="background:url(1.jpg) center top no-reapt;">
+<body style="background:url(1.jpg) center top no-repeat;">
 	I'm Wang QingZhi
 <img src="http://b364.photo.store.qq.com/psb?/V13CvoRz4f0cJw/pvyDUg6.*P4EZzA5pmHSGUd80HQMS1L852monT04wPU!/b/dGwBAAAAAAAA&bo=gAc4BAAAAAARB4s!&rf=viewer_4" width="500" height="300">	
 
