--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<title>jokerwango.github.io</title>
+	<script src="test.js"></script>
 </head>
 <body style="background:url(1.jpg) center top no-repeat;">
 	I'm Wang QingZhi
@@ -9,3 +10,4 @@
 
 </body>
 </html>
+
