--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="test.js"></script>
 </head>
 <body style="background:url(1.jpg) center top no-repeat;">
-	I'm Wang QingZhi
+	I'm Wang QingZhi test
 <img src="http://b364.photo.store.qq.com/psb?/V13CvoRz4f0cJw/pvyDUg6.*P4EZzA5pmHSGUd80HQMS1L852monT04wPU!/b/dGwBAAAAAAAA&bo=gAc4BAAAAAARB4s!&rf=viewer_4" width="500" height="300">	
 <a href="test.html">test.html</a>
 </body>
